--- a/src/Mod/Arch/Resources/Arch.qrc
+++ b/src/Mod/Arch/Resources/Arch.qrc
@@ -53,6 +53,7 @@
         <file>icons/Arch_CutPlane.svg</file>
         <file>icons/Arch_Bimserver.svg</file>
         <file>icons/Git.svg</file>
+        <file>icons/Arch_Component.svg</file>
         <file>ui/archprefs-base.ui</file>
         <file>ui/archprefs-defaults.ui</file>
         <file>ui/archprefs-import.ui</file>
